fix text spacing and paddings

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -127,15 +127,17 @@ p, p a, .card-text .card-description p a, .card-description-padding p a{
   font-weight: 400;
   font-size: 15px;
   color: #727272;
+  word-wrap:break-word;
+}
+.card-description p {
+	margin-top: 5.5px;
 }
 p a, .card-text .card-description p a, .card-description-padding p a {
 	color: #03A9F4;
 }
 .card-description-padding {
 	padding: 16px;
-}
-.card-text .card-description {
-	margin-bottom: 16px;
+	border-top:1px solid #B6B6B6
 }
 b i {
 	position: relative;
@@ -146,18 +148,18 @@ b i {
 	background: #fff;
 	border-radius: 3px;
 	margin-top: 16px;
-	border: 1px solid #B6B6B6;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	min-width: 300px;
 }
 .card-more {
-	border: 1px solid #B6B6B6;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	-webkit-transition: all .4s ease-in-out;
 	transition: all .2s ease-in-out;
 }
 .card-more:hover {
 	transform: scale(1.05);
 	-webkit-transform: scale(1.05);
-	box-shadow:0 12px 15px 0 rgba(0, 0, 0, 0.24)
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .card-stats {
@@ -253,12 +255,9 @@ b i {
 	height: 100%;
 }
 .card-text {
-	padding: 16px 16px 0 16px;
+	padding: 16px;
 	max-height: 200px;
 	overflow-y: scroll;
-}
-.video-title {
-	margin-bottom: 16px;
 }
 .video-cta {
 	position: absolute;
@@ -339,11 +338,7 @@ b i {
   font-weight: 500;
 }
 .comment-content p {
-	line-height: 19px;
-  font-weight: 400;
-  font-size: 15px;
   margin-top: 5px;
-  color: #727272;
 }
 .comment-content b {
 	margin-bottom: 0;
